--- a/pepeizqs deals web/Pages/Componentes/Secciones/CabeceraBuscador.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/CabeceraBuscador.razor
@@ -50,7 +50,7 @@
                                 }
                             </div>
 
-                            <div style="width: 250px; text-align: center;">
+                            <div style="padding: 20px; min-width: 200px; text-align: center;">
                                 @GenerarMensaje(juego)
                             </div>
                         </div>
