--- a/pepeizqs deals web/Pages/Shared/_Layout.cshtml
+++ b/pepeizqs deals web/Pages/Shared/_Layout.cshtml
@@ -181,6 +181,7 @@
                                         <a class="texto-cabecera menu-dropdown-item" href="https://beta.pepeizqdeals.com/Admin/Bundles">Bundles</a>
                                         <a class="texto-cabecera menu-dropdown-item" href="https://beta.pepeizqdeals.com/Admin/Gratis">Gratis</a>
                                         <a class="texto-cabecera menu-dropdown-item" href="https://beta.pepeizqdeals.com/Admin/Suscripciones">Suscripciones</a>
+                                        <a class="texto-cabecera menu-dropdown-item" href="https://beta.pepeizqdeals.com/Admin/Sorteos">Sorteos</a>
                                     </div>
                                 </div>
                             </li>
