--- a/pepeizqs deals web/Pages/Giveaways.cshtml
+++ b/pepeizqs deals web/Pages/Giveaways.cshtml
@@ -1,4 +1,9 @@
 ﻿@page
 @model pepeizqs_deals_web.Pages.GiveawaysModel
+
 @{
+	ViewData["Title"] = Herramientas.Idiomas.CogerCadena(Model.idioma, "Giveaways.Title");
+	Layout = "/Pages/Shared/_Layout.cshtml";
 }
+
+@(await Html.RenderComponentAsync<Componentes.Secciones.Sorteos>(RenderMode.ServerPrerendered, new { idioma = @Model.idioma, dominio = HttpContext.Request.Host.Value }))
