--- a/pepeizqs deals web/Pages/Componentes/Secciones/Juego.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/Juego.razor
@@ -166,15 +166,18 @@
 		{
 			@if (string.IsNullOrEmpty(juego.Maestro) == false)
 			{
-				<a href="/game/@juego.Maestro" style="text-decoration: none;">
-					<div class="perfil perfil-espacio-bottom" style="padding: 20px 40px; flex-direction: row; align-items: center; background-color: var(--fondoDlc); color: var(--colorTextoDlc);">
-						<i class="fa-solid fa-exclamation" style="font-size: 22px; margin-right: 30px;"></i>
+				@if (juego.Maestro != "no")
+				{
+					<a href="/game/@juego.Maestro" style="text-decoration: none;">
+						<div class="perfil perfil-espacio-bottom" style="padding: 20px 40px; flex-direction: row; align-items: center; background-color: var(--fondoDlc); color: var(--colorTextoDlc);">
+							<i class="fa-solid fa-exclamation" style="font-size: 22px; margin-right: 30px;"></i>
 
-						<div style="width: 100%;">
-							@Idiomas.CogerCadena(idioma, "Game.String32")
+							<div style="width: 100%;">
+								@Idiomas.CogerCadena(idioma, "Game.String32")
+							</div>
 						</div>
-					</div>
-				</a>
+					</a>
+				}				
 			}
 		}
 		else if (juego.Tipo == JuegoTipo.Game)
