--- a/pepeizqs deals web/Pages/Componentes/Admin/Gratis.razor
+++ b/pepeizqs deals web/Pages/Componentes/Admin/Gratis.razor
@@ -23,7 +23,8 @@
 										</div>
 
 										<div style="width: 88%; padding-left: 15px; padding-right: 15px; text-align: left;">
-											@juego.Id - @juego.Nombre
+											@juego.Nombre<br />
+											<span style="font-size: 13px;">@juego.Id.ToString()</span>
 										</div>
 									</div>
 								</button>
