--- a/pepeizqs deals web/Pages/Componentes/Secciones/Gratis.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/Gratis.razor
@@ -114,41 +114,93 @@
 	}
 }
 
-@if (gratisPasados.Count > 0)
-{
-	<div style="font-size: 23px; margin-top: 60px;">
-		@Herramientas.Idiomas.CogerCadena(idioma, "Free.String2")
-	</div>
+<div style="font-size: 23px; margin-top: 60px;">
+    @Herramientas.Idiomas.CogerCadena(idioma, "Free.String2")
+</div>
 
-	@foreach (var gratisPasado in gratisPasados)
-	{
-		<hr>
+<div style="display: flex; align-items: center; margin-top: 10px;">
+    @foreach (var año in años)
+    {
+        <button @onclick="@(e => CambiarAño(e, año))" class="boton-pequeño" style="margin-right: 15px; padding: 6px 10px; width: auto;">
+            @año
+        </button>
+    }
+</div>
 
-		<div style="display: flex; align-items: start;">
-			<div class="perfil" style="width: 20%;">
-				<img src="@gratisPasado.Tipo.ImagenLogo" />
-			</div>
+<div>
+    @foreach (var gratisPasado in gratisPasados)
+    {
+        List<Juegos.JuegoGratis> gratisAño = new List<Juegos.JuegoGratis>();
 
-			<div class="perfil" style="width: 80%;">
-				@foreach (var juego in gratisPasado.Juegos)
-				{
-					@if (gratisPasado.Tipo.DRMEnseñar == true)
-					{
-						<div>
-							<a href="/game/@juego.JuegoId">@juego.Nombre</a> (@Juegos.JuegoDRM2.DevolverDRM(juego.DRM)) @juego.FechaTermina.Month.ToString()/@juego.FechaTermina.Year.ToString()
-						</div>
-					}
-					else
-					{
-						<div>
-							<a href="/game/@juego.JuegoId">@juego.Nombre</a> @juego.FechaTermina.Month.ToString()/@juego.FechaTermina.Year.ToString()
-						</div>
-					}
-				}
-			</div>
-		</div>
-	}
-}
+        foreach (var juego in gratisPasado.Juegos)
+        {
+            if (juego.FechaEmpieza.Year.ToString() == añoSeleccionado)
+            {
+                gratisAño.Add(juego);
+            }
+        }
+
+        gratisPasado.Juegos = gratisAño;
+
+        if (gratisPasado.Juegos.Count > 0)
+        {
+            <hr>
+
+            <div style="display: flex; align-items: start;">
+                <div class="perfil" style="width: 20%;">
+                    <img src="@gratisPasado.Tipo.ImagenLogo" />
+                </div>
+
+                <div class="perfil" style="width: 80%;">
+                    @{
+                        int i = 1;
+                        while (i < 13)
+                        {
+                            List<Juegos.JuegoGratis> gratisMensual = new List<Juegos.JuegoGratis>();
+
+                            foreach (var juego in gratisPasado.Juegos)
+                            {
+                                if (juego.FechaEmpieza.Month == i)
+                                {
+                                    gratisMensual.Add(juego);
+                                }
+                            }
+
+                            if (gratisMensual.Count > 0)
+                            {
+                                <label>@Herramientas.Idiomas.CogerCadena(idioma, "Month." + i.ToString())</label>
+
+                                <ul>
+                                    @foreach (var juegoMensual in gratisMensual)
+                                    {
+                                        @if (gratisPasado.Tipo.DRMEnseñar == true)
+                                        {
+                                            <li>
+                                                <div>
+                                                    <a href="/game/@juegoMensual.JuegoId">@juegoMensual.Nombre</a> (@Juegos.JuegoDRM2.DevolverDRM(juegoMensual.DRM))
+                                                </div>
+                                            </li>
+                                        }
+                                        else
+                                        {
+                                            <li>
+                                                <div>
+                                                    <a href="/game/@juegoMensual.JuegoId">@juegoMensual.Nombre</a>
+                                                </div>
+                                            </li>
+                                        }
+                                    }
+                                </ul>
+                            }
+
+                            i += 1;
+                        }
+                    }
+                </div>
+            </div>
+        }
+    }
+</div>
 
 @code {
 
@@ -165,6 +217,9 @@
 
     private Usuario usuario = new Usuario();
     private List<string> juegosUsuario = new List<string>();
+
+    private List<string> años = new List<string>();
+    private string añoSeleccionado = string.Empty;
 
     protected override async Task OnInitializedAsync()
     {
@@ -204,12 +259,33 @@
 
         //--------------------------------------------------------------------
 
+        DateTime arranque = new DateTime(2023, 9, 1);
+
+        int i = 0;
+        while (i < 100)
+        {
+            if (arranque.Year != DateTime.Now.Year)
+            {
+                años.Add(arranque.Year.ToString());
+                arranque = arranque.AddYears(1);
+            }
+            i += 1;
+        }
+
+        años.Add(DateTime.Now.Year.ToString());
+        años.Reverse();
+
+        añoSeleccionado = DateTime.Now.Year.ToString();
+
+        GenerarArchivo();
+
+        //--------------------------------------------------------------------
+
         List<Juegos.JuegoGratis> juegosTodos = BaseDatos.Gratis.Buscar.Todos();
 
         if (juegosTodos.Count > 0)
         {
             List<Juegos.JuegoGratis> juegosActuales = new List<Juegos.JuegoGratis>();
-            List<Juegos.JuegoGratis> juegosPasados = new List<Juegos.JuegoGratis>();
 
             foreach (var juego in juegosTodos)
             {
@@ -221,10 +297,6 @@
                     juego.Juego = juego2;
 
                     juegosActuales.Add(juego);
-                }
-                else
-                {
-                    juegosPasados.Add(juego);
                 }
             }
 
@@ -253,6 +325,34 @@
                         gratisActuales.Add(componente);
                     }
                 }			
+            }
+        }
+    }
+
+    private void CambiarAño(MouseEventArgs e, string nuevoAño)
+    {
+        añoSeleccionado = nuevoAño;
+
+        GenerarArchivo();
+    }
+
+    private void GenerarArchivo()
+    {
+        List<Juegos.JuegoGratis> juegosTodos = BaseDatos.Gratis.Buscar.Todos();
+
+        if (juegosTodos.Count > 0)
+        {
+            List<Juegos.JuegoGratis> juegosPasados = new List<Juegos.JuegoGratis>();
+
+            foreach (var juego in juegosTodos)
+            {
+                if (DateTime.Now >= juego.FechaEmpieza && DateTime.Now <= juego.FechaTermina)
+                {
+                }
+                else
+                {
+                    juegosPasados.Add(juego);
+                }
             }
 
             if (juegosPasados.Count > 0)
@@ -313,9 +413,9 @@
                 {
                     return "6";
                 }
-			}
-		}
+            }
+        }
 
-		return null;
-	}
+        return null;
+    }
 }
