--- a/pepeizqs deals web/Pages/Componentes/Admin/Bundles.razor
+++ b/pepeizqs deals web/Pages/Componentes/Admin/Bundles.razor
@@ -94,7 +94,8 @@
 										</div>
 
 										<div style="width: 88%; padding-left: 15px; padding-right: 15px;">
-											@juego.Id - @juego.Nombre
+											@juego.Nombre<br />
+											<span style="font-size: 13px;">@juego.Id.ToString()</span>
 										</div>
 									</div>
 								</button>
