--- a/pepeizqs deals web/Pages/Componentes/Admin/Sorteos.razor
+++ b/pepeizqs deals web/Pages/Componentes/Admin/Sorteos.razor
@@ -42,7 +42,7 @@
 			</div>
 
 			<div style="width: 85%; padding-left: 20px; padding-right: 20px;">
-				<div>
+				<div style="margin-left: 5px;">
 					@nombreSeleccionado
 				</div>
 
@@ -56,9 +56,13 @@
 				</div>
 
 				<div style="width: 33%; margin-top: 20px;">
-					<div style="margin-bottom: 10px;">Clave:</div>
+					<div style="margin-bottom: 10px; margin-left: 5px;">Clave:</div>
 
 					<input type="text" @oninput="TextoCambiaClave" class="entrada-texto" />
+				</div>
+
+				<div style="width: 33%; margin-top: 20px;">
+
 				</div>
 			</div>
 		</div>
