--- a/pepeizqs deals web/Pages/Componentes/Secciones/Juego.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/Juego.razor
@@ -1082,6 +1082,9 @@
 
 				nuevoTexto = nuevoTexto.Replace("(Steam)", null);
 				nuevoTexto = nuevoTexto.Replace("(Epic)", null);
+				nuevoTexto = nuevoTexto.Replace("(GOG)", null);
+				nuevoTexto = nuevoTexto.Replace("(Giants)", null);
+				nuevoTexto = nuevoTexto.Replace("(Microsoft Store)", null);
 
 				return nuevoTexto;
 			}
